latest update to my learning of html

--- a/justhtml/index.html
+++ b/justhtml/index.html
@@ -15,6 +15,7 @@ a - element
   <meta name="author" content="Temi">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Firs Html Class</title>
+  <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
   <!--Paragraph tag-->
@@ -22,7 +23,7 @@ a - element
   <!--Headings tag
   h1 - h6
   -->
-  <h1>This is h1</h1>
+  <h1 style="color: orange;">This is h1</h1>
   <h2>This is h2</h2>
   <h3>This is h3</h3>
   <h4>This is h4</h4>
