--- a/witcards/index.html
+++ b/witcards/index.html
@@ -98,7 +98,7 @@
        <!-- right componenet -->
         <div class="right-info">
           <header>
-            <h1>Manju Sharma</h1>
+            <h1>Daniel Gabriel</h1>
           </header>
           <div>
             <p id="user-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit perferendis corrupti</p>
@@ -132,7 +132,7 @@
        <!-- right componenet -->
         <div class="right-info">
           <header>
-            <h1>Manju Sharma</h1>
+            <h1>Alli Tomiwa</h1>
           </header>
           <div>
             <p id="user-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit perferendis corrupti</p>
